--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles.css">
  </head>
  <body>
+    <header>
+        Fabian Lanz
+        
     <h1>Web Dev Training</h1>
-    <h2>Erste kleine Website</h2>
+    <h2>Erste Website</h2>
+    </header>
+    <main>
+        <ul>
+            <li>
+                Test 1
+            </li>
+            <li>
+                Test 2
+            </li>
+            <li>
+                Test 3
+            </li>
+            <li>
+                Test 4
+            </li>
+            <li>
+                Test 5
+            </li>
+            <li>
+                Test 6
+            </li>
+        </ul>
+    </main>
+
+    <footer>
+        Ende
+    </footer>
+    
  </body>
  </html>
